# Digital-Twin

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  DigitalTwinSaveProject.md  DigitalTwinTestApplication.py  DigitalTwinTestProject.md  LICENSE  MarkdownfilesDTProfile.kerml  README.md  broker.conf  conanfile.py  qt6.conf
BackendCommunicationService/tests/: CMakeLists.txt  main.cpp
CppDigitalTwin/BackendCommunicationService/: CMakeLists.txt
CppDigitalTwin/BackendCommunicationService/src/: BECommunicationService.cpp  BECommunicationService.h  CommunicationService.cpp  CommunicationService.h  cpp_backend_communication_global.h
CppDigitalTwin/BackendCommunicationService/src/APIImplementations/: StatusCode.h  SysMLAPIImplementation.cpp  SysMLAPIImplementation.h
CppDigitalTwin/BackendCommunicationService/src/Entities/: Branch.hpp  Commit.hpp  DigitalTwin.hpp  Element.hpp  IEntitie.h  Project.hpp  User.hpp
CppDigitalTwin/BackendCommunicationService/src/Exeptions/: ConnectionError.cpp  ConnectionError.h  HttpException.cpp  HttpException.h  NotEnoughMemoryError.cpp  NotEnoughMemoryError.h
CppDigitalTwin/BackendCommunicationService/src/entities/: DigitalTwin.h
CppDigitalTwin/BackendCommunicationService/tests/: CMakeLists.txt
CppDigitalTwin/CpsBaseLib/: CMakeLists.txt
CppDigitalTwin/CpsBaseLib/src/AGILABackendImplementation/: Authentication.cpp  Authentication.h  DigitalTwin.cpp  DigitalTwin.h
CppDigitalTwin/CpsBaseLib/src/BaseFuctions/: ListExtentions.cc  StringExtention.cpp  StringExtention.hpp
CppDigitalTwin/CpsBaseLib/src/SysMLv2Standard/: SysMLv2Deserializer.cpp  SysMLv2Deserializer.h
CppDigitalTwin/CpsBaseLib/tests/: CMakeLists.txt
CppDigitalTwin/CpsBaseLib/tests/BaseFunctions/: ListsExtentionTests.cpp  StringExtentionTest.cpp
CppDigitalTwin/DTClient/: CMakeLists.txt
CppDigitalTwin/DTClient/src/: main.cpp
CppDigitalTwin/DTClient/src/Dialogs/: SettingsDialog.cpp  SettingsDialog.h
CppDigitalTwin/DTClient/src/Models/: DigitalTwinClientSettings.cpp  DigitalTwinClientSettings.h  MainWindowModel.cpp  MainWindowModel.h  MainWindowStatus.h  MqttConnectionThread.cpp  MqttConnectionThread.h
CppDigitalTwin/DTClient/src/Widgets/: DigitalTwinMainWindow.cpp  DigitalTwinMainWindow.h  DigitalTwinTabWidget.cpp  DigitalTwinTabWidget.h  UploadProjectFileToBackend.cpp  UploadProjectFileToBackend.h
CppDigitalTwin/DTClient/ui/: CreateProjectDialog.ui  DigitalTwinMainWindow.ui  DigitalTwinTabWidget.ui  Resources.qrc  SettingsDialog.ui  TabContentWidget.ui  UploadProjectFileToBackend.ui
CppDigitalTwin/DTClient/ui/resources/: main.js
CppDigitalTwin/DTServer/: CMakeLists.txt
CppDigitalTwin/DTServer/src/: DigitalTwinServerInstanceManager.cpp  DigitalTwinServerInstanceManager.h  main.cpp
CppDigitalTwin/DigitalTwinLib/: CMakeLists.txt
CppDigitalTwin/DigitalTwinLib/src/: BaseDigitalTwinInstanceManager.cpp  DigitalTwinManager.cpp  DigitalTwinManager.h  cpp_digital_twin_lib_global.h
CppDigitalTwin/DigitalTwinLib/src/BaseDTClasses/: BaseDigitalTwinInstanceManager.h
CppDigitalTwin/DigitalTwinLib/src/Model/: Component.cpp  Component.h  DigitalTwinModel.cpp  DigitalTwinModel.h  IDigitalTwinElement.h  Variable.cpp  Variable.h
CppDigitalTwin/DigitalTwinLib/src/Parser/: Parser.cpp  Parser.h  SupportedModels.h
CppDigitalTwin/DigitalTwinLib/tests/: CMakeLists.txt
CppDigitalTwin/PhysicalTwinCommunicationService/: CMakeLists.txt
CppDigitalTwin/PhysicalTwinCommunicationService/src/: CommunicationService.cpp  CommunicationService.h  PTCommunicationService.cpp  PTCommunicationService.h  cpp_physical_twin_communication_global.h
CppDigitalTwin/PhysicalTwinCommunicationService/src/MQTT/: Topics.h
CppDigitalTwin/PhysicalTwinCommunicationService/src/Services/: AuthenticationService.cpp  AuthenticationService.h  MqttBrokerService.cpp  MqttBrokerService.h  MqttClientService.cpp  MqttClientService.h
CppDigitalTwin/PhysicalTwinCommunicationService/tests/: CMakeLists.txt
CpsBaseLib/: CMakeLists.txt
CpsBaseLib/src/: cps_base_global.h
CpsBaseLib/src/BaseFuctions/: ListExtentions.h
CpsBaseLib/tests/: CMakeLists.txt
DTServer/: CMakeLists.txt
DTServer/src/: AuthenticationService.cpp  AuthenticationService.h  BrokerState.cpp  BrokerState.h  DigitalTwinServerInstanceManager.cpp  DigitalTwinServerInstanceManager.h  MqttBrokerService.cpp  MqttBrokerService.h  Session.cpp  Session.h  SubscriptionStorage.cpp  SubscriptionStorage.h  main.cpp
DTServer/src/MQTTBrokerLegacy/: retained_topic_map.hpp
DigitalTwinLib/: CMakeLists.txt
DigitalTwinLib/src/: DigitalTwinManager.cpp  DigitalTwinManager.h  cpp_digital_twin_lib_global.h
DigitalTwinLib/src/Model/: DigitalTwinModel.cpp
DigitalTwinLib/tests/: CMakeLists.txt
PhysicalTwinCommunicationService/tests/: CMakeLists.txt
energy-probe-driver/: CMakeLists.txt  conanfile.py
energy-probe-driver/cmake/pkg/: energyprobedriver-config.cmake.in
energy-probe-driver/include/: DataPointObserver.h  Definitions.h  Device.h  DirectConnectionManager.h  DriverSessionManager.h  EnergyProbe.h  EnergyProbeDriver.h  Fifo.h  MeasurePoint.h  energy_probe_driver_global.h
energy-probe-driver/src/: DataPointObserver.cpp  Device.cpp  DirectConnectionManager.cpp  DriverSessionManager.cpp  EnergyProbe.cpp  EnergyProbeDriver.cpp  Fifo.cpp  MeasurePoint.cpp
energy-probe-driver/test_package/: CMakeLists.txt  conanfile.py
energy-probe-driver/test_package/src/: example.cpp
realtwester/: CMakeLists.txt  README.md  conanfile.py
realtwester/src/: RealTwester.cpp  RealTwester.h  RestAPIConnector.cpp  RestAPIConnector.h  digitwester.cpp  digitwester.h  digitwester_global.h  main.cpp
realtwester/src/Data/: DataPoint.cpp  DataPoint.h  IDataBase.h  Project.cpp  Project.h
realtwester/src/Exceptions/: NotInitializedException.cpp  NotInitializedException.h  ServerNotReachableException.cpp  ServerNotReachableException.h
realtwester/src/Logging/: LoggingService.cpp  LoggingService.h
realtwester/src/RaspberryPiTester/: DriverSessionManager.cpp  DriverSessionManager.h  SerialPort.cpp
realtwester/test_package/: conanfile.py
(+1081 files in other folders)
